# BytIA-KODE

./: .env.example  .gitignore  AUTHORS.md  B-KODE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
.serena/: project.yml
auditoria/: 01_seguridad.md  02_arquitectura.md  03_calidad_codigo.md  INFORME_EJECUTIVO.md  history.json  performance_report.md
docs/: ARCHITECTURE.md  BENCHMARK_PROMPT.md  CODE-REVIEW.md  DEVELOPMENT.md  INTERCOM-REFACTOR.md  PLAN-memory-manager-B-KODE.md  SESSION_AUDIT_tui_cd8638f8.md  TUI.md  deepseek-v4-technical-report.md  dsv4.html  structured-cot-analysis.md
docs/devlog/: 2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-15.md  2026-04-17.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  Session-39-MCP-Client.md
docs/specs/: 2026-04-13-agentic-loop-fix-design.md
docs/superpowers/plans/: 2026-04-07-multi-workspace-context.md  2026-04-15-circuit-breaker.md
docs/superpowers/specs/: 2026-04-07-multi-workspace-context-design.md  2026-04-15-circuit-breaker-design.md
scripts/: benchmark_io.py  check_secrets.py  sync-vendor-skills.sh  validate_metadata.py
src/bytia_kode/: __init__.py  __main__.py  agent.py  audio.py  cli.py  config.py  context.py  session.py  tui.css  tui.css.backup.20260402_073038  tui.py  tui.py.backup.20260402_073037
src/bytia_kode/mcp/: __init__.py  client.py  config.py  tool.py
src/bytia_kode/memory/: store.py
src/bytia_kode/prompts/: __init__.py  bytia.kernel.yaml  bytia.runtime.kode.yaml  core_identity.yaml  kernel.default.yaml  runtime.default.yaml
src/bytia_kode/prompts/grammars/: __init__.py  p20_error_propagation.gbnf  p22_capability_assessment.gbnf  think_goal_approach_edge.gbnf  think_goal_state_algo_edge_verify.gbnf
src/bytia_kode/prompts/legacy/: core_identity.yaml.v12.1.0.yaml
src/bytia_kode/providers/: circuit.py  client.py  client.py.backup.20260402_073039  manager.py
src/bytia_kode/skills/: loader.py
src/bytia_kode/telegram/: bot.py
src/bytia_kode/tools/: registry.py  session.py
src/tests/: __init__.py  test_basics.py
tests/: test_agentic_loop.py  test_circuit_breaker.py  test_context.py  test_context_management.py  test_exploration_tools.py  test_file_edit.py  test_grammar.py  test_provider_health.py  test_session.py
