[project]
name = "bytia-kode"
version = "0.1.0"
description = "BytIA KODE - Agentic coding CLI & Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "python-telegram-bot>=22.0",
    "pydantic>=2.11",
    "rich>=14.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "textual>=8.2.1",
    "python-docx>=1.2.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3",
]
memory = [
    "sentence-transformers>=4.0",
    "faiss-cpu>=1.11",
]

[project.scripts]
bytia-kode = "bytia_kode.tui:run_tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
]
