[project]
name = "bytia-kode"
version = "0.3.0"
description = "BytIA KODE - Agentic coding CLI & Telegram bot"
authors = [{ name = "Asturwebs", email = "dev@asturwebs.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "python-telegram-bot>=22.0",
    "pydantic>=2.11",
    "rich>=14.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "textual>=8.2.1",
    "python-docx>=1.2.0",
    "beautifulsoup4>=4.14.3",
]


[project.urls]
Repository = "https://github.com/asturwebs/BytIA-KODE"
Issues = "https://github.com/asturwebs/BytIA-KODE/issues"

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3",
]
memory = [
    "sentence-transformers>=4.0",
    "faiss-cpu>=1.11",
]

[project.scripts]
bytia-kode = "bytia_kode.tui:run_tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
]

[tool.hatch.build]
exclude = [
    "src/bytia_kode/*.backup.*",
    "src/bytia_kode/**/*.backup.*",
    "src/bytia_kode/*.bak",
    "src/bytia_kode/**/*.bak",
    "src/bytia_kode/agent_new.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bytia_kode"]
