[project]
name = "bytia-kode"
version = "0.5.6"
description = "B-KODE: Agente + Skills + Terminal. La automatización empresarial cabe en tu CLI."
authors = [{ name = "Pedro Luis Cuevas Villarrubia", email = "pedro@asturwebs.es" }]
maintainers = [{ name = "BytIA" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["tui", "agent", "llm", "yaml", "textual", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "python-telegram-bot>=22.0",
    "pydantic>=2.11",
    "rich>=14.0",
    "pyyaml>=6.0",
    "textual>=8.2.1",
    "edge-tts>=7.2.8",
]

[project.urls]
Repository = "https://github.com/asturwebs/BytIA-KODE"
Issues = "https://github.com/asturwebs/BytIA-KODE/issues"
Changelog = "https://github.com/asturwebs/BytIA-KODE/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "textual-dev>=1.8.0",
]
local = ["llama-cpp-python>=0.3"]
memory = ["sentence-transformers>=4.0", "faiss-cpu>=1.11"]

[project.scripts]
bytia-kode = "bytia_kode.tui:run_tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
    "build>=1.4.2",
    "twine>=6.2.0",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build]
exclude = [
    "src/bytia_kode/*.backup.*",
    "src/bytia_kode/**/*.backup.*",
    "src/bytia_kode/*.bak",
    "src/bytia_kode/**/*.bak",
    "src/bytia_kode/agent_new.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bytia_kode"]
